2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        * gtk/gtkfilechooserdefault.c (update_current_folder_get_info_cb):
        Mount the enclosing volume if the folder we're switching to is not
        mounted. Patch by Tomas Bzatek, based on work by Carlos Garnacho

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        Bug 561494 – FileChooser network browsing and authentication support

        * gtk/gtkfilesystem.[hc] (_gtk_file_info_consider_as_directory):
        Privately export this method. It classifies directories and mountables
        the same.

        * gtk/gtkfilesystem.c (enclosing_volume_mount_cb): Silently drop
        G_IO_ERROR_ALREADY_MOUNTED error for gvfs backends without visible
        mounts.

        * gtk/gtkfilesystemmodel.c:
        * gtk/gtkfilechooserbutton.c:
        * gtk/gtkfilechooserentry.c:
        * gtk/gtkfilechooserdefault.c: Use the new function instead of
        direct checks for G_FILE_TYPE_DIRECTORY throughout.

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        Bug 562579 – Remove error dialog when directory does not exist

        * gtk/gtkfilechooserdefault.c (update_current_folder_get_info_cb):
        Don't show an error dialog when changing to a non-existing folder,
        since this is ususally just an annoyance. 

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        Bug 556233 – local-only causes G_IS_FILE warning

        * gtk/gktfilechooserdefault.c (set_local_only): Avoid a warning
        in tests. Patch by Christian Dywan

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        Bug 563158 – CellRendererProgress pulsing and progressing rows can
        not be used together

        * gtk/gtkcellrendererprogress.c (gtk_cell_renderer_progress_set_pulse):
        Don't try to keep state in a cell renderer between two paint